--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="form signup"> <!--Форма регистрации-->
         <header>Регистрация</header>
         <form action="#">
-          <input type="text" placeholder="Никнейи" required />
+          <input type="text" placeholder="Никнейм" required />
           <input type="text" placeholder="Почта" required />
           <input type="password" placeholder="Пароль" required />
           <!--Чекбокс о "запоминании себя"-->
